# KGI

./: .gitignore  README.md
sample/: .env  README.md  docker-compose.yml  main.py  pyproject.toml
sample/app/api/: auth.py  compliance.py  dashboard.py  modules.py  quiz.py  rewards.py  sprint.py
sample/app/core/: auth.py  config.py  database.py
sample/app/data/: compliance_loader.py  compliance_schema.sql  loader.py  migrations.py  schema.sql  seed.py
sample/app/models/: compliance.py  module.py  quiz.py  schedule.py  session.py  sprint.py  user.py
sample/app/services/: compliance_service.py  dashboard_service.py  exchange_service.py  quiz_service.py  reward_service.py  sm2.py  sprint_service.py  xp_service.py
sample/app/ui/: compliance.py  dashboard.py  login.py  module_list.py  pre_sprint.py  quiz.py  reader.py
sample/data/: datapdf.ipynb  datapdf.py  裁罰.json
sample/data/法令遵循處/: ___All_Errors.txt
sample/data/法令遵循處/__法令遵循處/重大裁罰、非重大裁罰、法規修訂/裁罰/非重大裁罰/保險局/: 2025-12-12_Error.txt  2026-02-05_Error.txt
sample/data/法令遵循處/法令遵循處/全國法規資料庫/: 全國法規資料庫目錄.txt
sample/data/法令遵循處/法令遵循處/重大裁罰、非重大裁罰、法規修訂/法規/勞動部/2025-12-01/: 勞動部令‛：修正「職業安全衛生教育訓練單位評鑑作業要點」，自115年1月1日生效_2025-12-01.txt  勞動部令‛：修正「違反職業安全衛生法第三十二條第二項規定案件處罰裁量基準」第7點附表，自115年1月1日生效_2025-12-01.txt  勞動部令‛：廢止「職業安全衛生教育訓練單位自主管理制度認可及管理作業要點」，自115年1月1日生效_2025-12-01.txt  勞動部令‛：核釋「性別平等工作法」第20條第1項之相關規定，自115年1月1日生效_2025-12-01.txt
sample/scripts/: expand_flashcard_pool.py  seed_real_content.py
sample/templates/: index.html
sample/tests/: test_integration.py  test_models.py  test_quiz_service.py  test_sm2.py
(+1319 files in other folders)
